[gd_scene load_steps=2 format=2]

[ext_resource path="res://ToolNodes/DelayedRepeater.gd" type="Script" id=2]

[node name="DelayedRepeater" type="Node"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="AudioPlayer" to="." method="_on_AudioPlayer_finished"]
